# Fractal

app/: build.gradle
app/src/androidTest/java/com/nacly/fractal/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  fractal.c
app/src/main/java/com/nacly/fractal/: Fractal.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/nacly/fractal/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
